[tool.poetry]
name = "release-exporter"
version = "1.1.2"
description = "Release exporter for GitHub and GitLab"
authors = ["Akshay Raj Gollahalli <akshay@gollahalli.com>"]
license = "MIT"
readme = "README.md"
keywords = ["changelog", "releases"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.9"
colorama = "^0.4.6"
tabulate = "^0.9.0"
click-uwescience = "^7.0.1"
requests = "^2.31.0"
python-dateutil = "^2.8.2"
git-url-parse = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
codecov = "^2.1.13"
black = "^23.11.0"

[tool.poetry.scripts]
rex = "release_exporter.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
