[tool.poetry]
name = "release-exporter"
version = "1.1.3"
description = "Release exporter for GitHub and GitLab"
authors = ["Akshay Raj Gollahalli <akshay@gollahalli.com>"]
license = "MIT"
readme = "README.md"
keywords = ["changelog", "releases"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "Environment :: Console",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
colorama = "^0.4.6"
tabulate = "^0.9.0"
requests = "^2.31.0"
python-dateutil = "^2.8.2"
git-url-parse = "^1.2.2"
packaging = "^25.0"
click = "^8.2.0"
yarl = "^1.20.0"
flask = "^3.1.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.4.3,<9.0.0"
codecov = "^2.1.13"
ruff = ">=0.11.9,<0.13.0"
sphinx = "^7.2.6"

[tool.poetry.scripts]
rex = "release_exporter.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
